--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,6 @@
   </app-root>
 </body>
 <!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=YOUR_KEY_HERE"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAqvc32Zs40a3rgzvyDOuEsLk3L7gzO18w"></script>
 
 </html>
